converted to sample